WCAG: fix contrast on disclaimers + results list 2ndary action
* previously the contrast wasn't great enough for disclaimer text; this fixes that
  (while also switching to from RGB to #hex since we weren't using alpha value so no need for RGB syntax)

* we now have a '.lesser-text' class for things lower in the visual hierarchy (which may or may not be disclaimers).
  note: .lesser-text needs more specificity to overcome font-size of .jumbotron p

* use the same style as the disclaimer on the first .jumbotron - gray with a bold link [1]

* to conform with WCAG 1.4.1 (Use of Color) [1], we switch from distinguishing links in disclaimer simply by color
  (blue vs light gray) to use a combination of bold font-weight and a dotted underline for links. Note, we use partly
  because it's more subtle and aesthetically pleasing for most, but also because bold is recommended as a more
  readable alternative to underlining for dyslexic users [2]

* note also we make .lesser-text font a bit smaller (while still readable) so it's position in the visual hierarchy is maintained
  while we're making it darker.

* fixes contrast for results list secondary call to action ("or try a new search")

1: see: Use of Color - https://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-without-color.html
- 1.4.1 Use of Color: Color is not used as the only visual means of conveying information, indicating an action, prompting a response, or distinguishing a visual element. (Level A)
- Common failure: "F73: Failure of Success Criterion 1.4.1 due to creating links that are not visually evident without color vision"

2: http://www.bdadyslexia.org.uk/common/ckeditor/filemanager/userfiles/About_Us/policies/Dyslexia_Style_Guide.pdf

--- a/css/style.css
+++ b/css/style.css
@@ -433,9 +433,22 @@ input#nearby-girls {
 	margin-top: 1em;
 }
 .jumbotron .disclaimer {
-	margin-top: 1em;
+	margin-top: 24px;
 	margin-bottom: 0em;
-	color: rgb(153, 153, 153);
+}
+
+.jumbotron .lesser-text {
+	font-size: 16px;
+	color: #717171;
+}
+.lesser-text a {
+	color: inherit;
+	font-weight: bold;
+	text-decoration: none;
+	border-bottom: 1px dotted;
+}
+.lesser-text a:hover {
+	border-bottom-style: solid;
 }
 .school-name-search {
 	margin-right: 2em;
